--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html ; charset=utf-8" />
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
-    <link rel="../static/semantic.css" type="text/css" />
-    <link rel="../static/semantic.js" type="text/javascript" />
+    <link rel="/static/semantic.css" type="text/css" />
+    <link rel="/static/semantic.js" type="text/javascript" />
   </head>
   <body>
   <body>
