--- a/static/wboard.css
+++ b/static/wboard.css
@@ -1,61 +1,66 @@
-.wboard.main {
-	background-color: rgba(0,0,0,0.05);
-	border: solid 1px rgba(0,0,0,0.05);
-	border-radius: 3px;
-	height: auto;
-	position: absolute;
-	left: 30px;
-	top: 40px ;
-	right:30px;
-	min-height:500px;
-	bottom:50px;
-}
 .wobard.head {
-	width:95%;
-	height:15px;;
+        width:95%;
+        height:15px;;
 }
 .wboard.head.logined {
-	width: 100%;
-	height: 14px;
-	font: "Microsoft YaHei UI";
-	font-size: 14px;
-	border-radius: 0.1875rem;
+        width: 100%;
+        height: 14px;
+        font: "Microsoft YaHei UI";
+        font-size: 14px;
+        border-radius: 0.1875rem;
 }
 .wboard.head.logined .item {
-	border-left:1px solid #DDDDDD;
-	-wenkit-user-select:none;
-	-moz-user-select:none;
-	-ms-user-select:none;
-	user-select:none;
-	float:left;
-	text-align:center;
-	vertical-align:middle;
-	width-min:40px;
-	padding:0px 5px 0px 5px;
-	text-decoration:none;
+        border-left:1px solid #DDDDDD;
+        -wenkit-user-select:none;
+        -moz-user-select:none;
+        -ms-user-select:none;
+        user-select:none;
+        float:left;
+        text-align:center;
+        vertical-align:middle;
+        width-min:40px;
+        padding:0px 5px 0px 5px;
+        text-decoration:none;
 }
 .wboard.head.logined .item,
 .wboard.head.logined .item > a {
-	color:rgba(0,0,0,0.75);
+        color:rgba(0,0,0,0.75);
 }
 .wboard.head.logined .item.left {
-	float:left;
+        float:left;
 }
 .wboard.head.logined .item.right {
-	float:right;
+        float:right;
 }
-.wboard.image {
-	position:relative;
-	max-width:100%;
-	display:inline-block;
-	vertical-align:middle;
-	background-color:rgba(0,0,0,0.05);
+/* Tiny */
+.ui.tiny.modal > .header {
+  font-size: 1em;
 }
-.wboard.image img {
-	display:block;
-	max-width:100%;
-	height:auto;
+
+@media only screen and (min-width: 998px) {
+  .ui.tiny.modal {
+    width: 40%;
+    margin-left: -20%;
+  }
 }
-.wboard.menu {
-	font-size:0px;
+
+@media only screen and (min-width: 1500px) {
+  .ui.tiny.modal {
+    width: 26%;
+    margin-left: -13%;
+  }
+}
+
+@media only screen and (min-width: 1750px) {
+  .ui.tiny.modal {
+    width: 20%;
+    margin-left: -10%;
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  .ui.tiny.modal {
+    width: 16%;
+    margin-left: -8%;
+  }
 }
