--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,53 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"></head>
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
-    <script src="/static/semantic.js" type="text/javascript"></script>
-    <link href="/static/semantic.css" rel="stylesheet" type="text/css" />
-    <link href="/static/wboard.css" rel="stylesheet" type="text/css" />
-    <script src="/static/wboard.js" type="text/javascript"></script>
+    <script src="../static/semantic.js" type="text/javascript"></script>
+    <link href="../static/semantic.css" rel="stylesheet" type="text/css" />
+    <link href="../static/wboard.css" rel="stylesheet" type="text/css" />
+    <script src="../static/wboard.js" type="text/javascript"></script>
   </head>
   <body>
     <!--Check the usergroup and decide which to show.We need a judgement here.-->
-    <div class="wboard head">
-      <div class="wboard head logined">
-        <a href="#" class="item right">退出</a>
-        <label class="item right">用户名</label>
+    <div class="wboard head logined">
+      <a href="#" class="item right">退出</a>
+      <label class="item right">Username</label>
+    </div>
+    <div class="ui active blue progress" style="margin-top:200px;">
+      <div class="bar" style="width:30%">
       </div>
     </div>
-    <div class="wboard main">
-      <img class="wboard image" src="" >
+    <div class="ui tiny modal" id="Login">
+      <i class="close icon"></i>
+      <div class="header">登陆</div>
+      <div class="content">
+        <div class="ui form segment">
+          <div class="two fields">
+            <div class="field">
+              <label>用户名:</label>
+              <input type="text">
+            </div>
+            <div class="field">
+              <label>密码:</label>
+              <input type="password">
+            </div>
+          </div>
+        </div>
+        <div class="action">
+          <div class="ui blue button">登陆</div>
+          <div class="ui red button">取消</div>
+        </div>
+      </div>
     </div>
+    <script language="javascript">
+	  $('[id=Login]')
+	    .modal();
+	</script>
+    <div class="ui button" id="LgnBtn">Login</div>
+	<script>
+	  $('[id=Login]').modal('attachEvents','[id=LgnBtn]','show');
+	</script>
     <!-- Menu --> 
     <!-- Grid -->
     <!-- Tail -->
