--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,50 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"></head>
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
-    <script src="/static/semantic.js" type="text/javascript"></script>
-    <link href="/static/semantic.css" rel="stylesheet" type="text/css" />
-    <link href="/static/wboard.css" rel="stylesheet" type="text/css" />
-    <script src="/static/wboard.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <!--Check the usergroup and decide which to show.We need a judgement here.-->
-    <div class="wboard head">
-      <div class="wboard head logined">
-				{% if user.is_authenticated %}
-        <a href="/accounts/logout/" class="item right">退出</a>
-        <label class="item right">{{user.username}}</label>
-				{% else %}
-				<a href="/accounts/login/", class="item right">登录</a>
-				{% endif %}
-      </div>
-    </div>
-    <div class="wboard main">
-      <img class="wboard image" src="" >
-			{% block main %}{% endblock %}
-    </div>
-		
-    <!-- Menu --> 
-    <!-- Grid -->
-    <!-- Tail -->
-  </body>
+<head>
+	<script type="text/javascript" src="/static/js/jquery-2.1.0.min.js"></script>
+	<script type="text/javascript" src="/static/js/wboard.js"></script>
+	<script src="/static/js/bootstrap.js" type="text/javascript"></script>
+	<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css">
+	<style>
+		textarea {
+			resize: none;
+		}
+	</style>
+</head>
+<body style="min-height:800px;">
+	<script>
+		hasLogined = {%if user.is_authenticated%} true {%else%} false {%endif%};
+		username = "{{user.profile.nick_name}}";
+		$(document).ready(function () {
+			$("form").submit(function(e){e.preventDefault();});
+		});
+	</script>
+	<!-- Menu Starts-->
+	{% include "header.html" %}
+	<!-- Menu Ends -->
+	<!-- Main Starts -->
+	<div class="container">
+		<div class="row">
+			<!-- Sidebar starts -->
+			<div class="col-md-3">
+				{% block sidebar %}{% include "sidebar.html" %}{% endblock %}
+			</div>
+			<div class="col-md-9">
+			{% block main_content %}{% endblock %}
+			</div>
+		</div>
+	</div>
+	<script src="/static/js/tab.js"></script>
+	<script src="/static/js/transition.js"></script>
+	<script src="/static/js/alert.js"></script>
+	<script src="/static/js/modal.js"></script>
+	<script src="/static/js/dropdown.js"></script>
+	<script src="/static/js/scrollspy.js"></script>
+	<script src="/static/js/tab.js"></script>
+	<script src="/static/js/tooltip.js"></script>
+	<script src="/static/js/popover.js"></script>
+	<script src="/static/js/button.js"></script>
+	<script src="/static/js/collapse.js"></script>
+	<script src="/static/js/carousel.js"></script>
+</body>
 </html>
