--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css">
-		<script type="text/javascript" src="/static/js/jquery-2.1.0.min.js"></script>
-		<script src="/static/js/bootstrap.js" type="text/javascript"></script>
-	</head>
-	<body>
-	  <script type="text/javascript"> $(document).ready(function () { $('.dropdown-toggle').dropdown(); }); </script>
-	  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <head>
+           <script type="text/javascript" src="/static/js/jquery-2.1.0.min.js"></script>
+           <script src="/static/js/bootstrap.js" type="text/javascript"></script>
+                <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css">
+        </head>
+        <body style="min-height:800px;">
+          <script type="text/javascript"> $(document).ready(function () { $('.dropdown-toggle').dropdown(); }); </script>
+          <!-- Menu Starts-->
+          <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,39 +20,86 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">主页 Home</a></li>
-            <li><a href="#">中文系统 Chinese Committee</a></li>
-            <li><a href="#">英文系统 English Committee</a></li>
+            <li><a href="#">主页 Home</a></li>
+            <li class="dropdown" id="CommSel">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#CommSel">选择系统语言 Choose Language
+              <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">中文系统</a></li>
+                  <li><div class="divider"></div></li>
+                            <li><a href="#">English Committee</a></li>
+                </ul>
+            </li>
           </ul>
-          <form class="navbar-form navbar-right">
-              <input class="span2" type="text" placeholder="用户名">
-              <input class="span2" type="password" placeholder="密码">
-              <button type="submit" class="btn">登录</button>
+          <form class="navbar-form navbar-right" role="form">
+            <div class="form-group">
+              <input type="text" placeholder="用户名" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="密码" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">登录</button>
           </form>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
-        <ul class="nav nav-pills">
-    <li><a href="#">规则的链接</a></li>
-    <li class="dropdown" id="menutest1">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#menutest1">
-    下拉项
-    <b class="caret"></b>
-    </a>
-    <ul class="dropdown-menu">
-    <li><a href="#">动作</a></li>
-    <li><a href="#">另一个动作</a></li>
-    <li><a href="#">其他</a></li>
-    <li class="divider"></li>
-    <li><a href="#">被间隔的链接</a></li>
-    </ul>
-    </li>
-    <li class='active'>
-    <a data-toggle="dropdown" href="#menutest1">点击我看看</a>
-    </li>
-    </ul>
+    <!-- Menu Ends -->
+    <!-- Main Starts -->
+    <div class="container">
+      <div class="row">
+        <!-- Sidebar starts -->
+        <div class="col-md-3">
+        <div class="panel-group" id="userSidebar">
+                      <div class="panel panel-default">
+                       <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#userSidebar" href="#collapseOne">
+                      条目1
+                          </a>
+                      </h4>
+                       </div>
+                            <div id="collapseOne" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            adsfadf.
+                        </div>
+                            </div>
+                           </div>
+                           <div class="panel panel-default">
+                       <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#userSidebar" href="#collapseTwo">
+                        条目2
+                            </a>
+                        </h4>
+                            </div>
+                            <div id="collapseTwo" class="panel-collapse collapse">
+                        <div class="panel-body">
+                sdfsdfsdf
+                        </div>
+                            </div>
+                           </div>
+                           <div class="panel panel-default">
+                            <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#userSidebar" href="#collapseThree">
+                             条目3
+                                 </a>
+                        </h4>
+                            </div>
+                             <div id="collapseThree" class="panel-collapse collapse">
+                         <div class="panel-body">
+                            sdfsdf
+                         </div>
+                             </div>
+                          </div>
+                 </div>
+      </div>
+      </div>
+      <div class="col-md-9">
+      </div>
+    </div>
     <script src="/static/js/tab.js"></script>
-	 <script src="/static/js/transition.js"></script>
+         <script src="/static/js/transition.js"></script>
     <script src="/static/js/alert.js"></script>
     <script src="/static/js/modal.js"></script>
     <script src="/static/js/dropdown.js"></script>
@@ -62,5 +110,5 @@
     <script src="/static/js/button.js"></script>
     <script src="/static/js/collapse.js"></script>
     <script src="/static/js/carousel.js"></script>
-	</body>
+        </body>
 </html>
