--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
 		username = "{{user.profile.nick_name}}";
 		$(document).ready(function () {
 			$("form").submit(function(e){e.preventDefault();});
+			$(".dropdown-toggle").dropdown();
 		});
 	</script>
 	<!-- Menu Starts-->
@@ -42,7 +43,7 @@
 			<div class="col-md-3">
 				{% block sidebar %}{% include "sidebar.html" %}{% endblock %}
 			</div>
-			<div class="col-md-9">
+			<div class="col-md-6">
 			{% block main_content %}{% endblock %}
 			</div>
 		</div>
