--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,8 @@
 {%extends "base.html"%}
-{% block sidebar %}{% endblock %}
-{% block main_content %}
-<form action="" method="POST">
-	{% csrf_token %}
-	<input placeholder="用户名" type="text" name="username"></input>
-	<input placeholder="密码" type="password" name="password"></input>
-	<input type="hidden" name="next" value="/"></input>
-	<input type="submit"></input>
+<form class="form-signin" role="form">
+  {% csrf token %}
+	<h2 class="form-signin-heading">请登录</h2>
+   <input type="email" class="form-control" placeholder="用户名" required autofocus>
+   <input type="password" class="form-control" placeholder="密码" required>
+   <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
 </form>
-{% endblock %}
