--- a/templates/webboard/status/detail.html
+++ b/templates/webboard/status/detail.html
@@ -12,7 +12,7 @@
 	<hr/>
 </div>
 
-<div id="commentList" class="col-md-12">
+<div id="commentListContainer" class="col-md-12">
 </div>
 
 <div class="panel-body">
