--- a/templates/webboard/status/detail.html
+++ b/templates/webboard/status/detail.html
@@ -33,8 +33,6 @@
     <div class="page-header">
     	<h2>评论</h2>
     </div>
-    <blockquote id="commentList" class="col-md-12">
-    </blockquote>
 	<form role="form" id="formComment">
 		<div class="form-group">
 			<textarea class="form-control" rows="5" placeholder="请在这输入评论" name="body_text"></textarea>
@@ -44,12 +42,14 @@
 			<button type="button" id="formCommentSubmit" class="pull-right btn btn-primary">提交</button>
 		</div>
 	</form>
+    <blockquote id="commentList" class="col-md-12">
+    </blockquote>
     <script type="text/javascript" src="/static/js/list.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
-			commentsList = new List("webboardCommentList", "#commentList", '<div class="panel-sm panel panel-default"><div class="panel-heading"><h6 class="panel-title">{author.nick_name}</h6></div><div class="panel-body">{body_text}</div><div class="panel-footer text-right"><small>{created_time}</small></div></div>', {status_id: {{object.id}}, limit:5});
+			commentsList = new List("webboardCommentList", "#commentList", '<div class="panel-sm panel panel-default"><div class="panel-heading"><h6 class="panel-title"><button data-id="{author.id}" class="user-name btn-sm btn btn-link">{author.nick_name}</button></h6></div><div class="panel-body">{body_text}</div><div class="panel-footer text-right"><small>{created_time}</small></div></div>', {status_id: {{object.id}}, limit:5});
 			commentsList.update();
-			$("#mainText").html(processBodyText("{{object.body_text}}"));
+			$("#mainText").html(processBodyText("{{object.body_text|linebreaksbr}}"));
 			$("#formComment textarea").keypress(function (e) {
 				if (e.ctrlKey && (e.which == 13 || e.which == 10)) {$("#formCommentSubmit").click()}
 			});
