--- a/templates/index.html
+++ b/templates/index.html
@@ -1,114 +1,70 @@
-<!DOCTYPE html>
-<html>
-        <head>
-           <script type="text/javascript" src="/static/js/jquery-2.1.0.min.js"></script>
-           <script src="/static/js/bootstrap.js" type="text/javascript"></script>
-                <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css">
-        </head>
-        <body style="min-height:800px;">
-          <script type="text/javascript"> $(document).ready(function () { $('.dropdown-toggle').dropdown(); }); </script>
-          <!-- Menu Starts-->
-          <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">主页 Home</a></li>
-            <li class="dropdown" id="CommSel">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#CommSel">选择系统语言 Choose Language
-              <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">中文系统</a></li>
-                  <li><div class="divider"></div></li>
-                            <li><a href="#">English Committee</a></li>
-                </ul>
-            </li>
-          </ul>
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="用户名" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="密码" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">登录</button>
-          </form>
-        </div>
+<script>
+	$('.carousel').carousel();
+	$('.carousel').carousel({
+  		interval: 1000
+	});
+</script>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="/static/img/index.svg" alt="...">
+      <div class="carousel-caption">
+        ...
       </div>
     </div>
-    <!-- Menu Ends -->
-    <!-- Main Starts -->
-    <div class="container">
+    <div class="item">
+      <img src="/static/img/index2.svg" alt="...">
+      <div class="carousel-caption">
+      ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="/static/img/index1.svg" alt="...">
+      <div class="carousel-caption">
+      ...
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+<div class="container">
+      <!-- Example row of columns -->
       <div class="row">
-        <!-- Sidebar starts -->
-        <div class="col-md-3">
-        <div class="panel-group" id="userSidebar">
-                      <div class="panel panel-default">
-                       <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <a data-toggle="collapse" data-parent="#userSidebar" href="#collapseOne">
-                      条目1
-                          </a>
-                      </h4>
-                       </div>
-                            <div id="collapseOne" class="panel-collapse collapse in">
-                        <div class="panel-body">
-                            adsfadf.
-                        </div>
-                            </div>
-                           </div>
-                           <div class="panel panel-default">
-                       <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#userSidebar" href="#collapseTwo">
-                        条目2
-                            </a>
-                        </h4>
-                            </div>
-                            <div id="collapseTwo" class="panel-collapse collapse">
-                        <div class="panel-body">
-                sdfsdfsdf
-                        </div>
-                            </div>
-                           </div>
-                           <div class="panel panel-default">
-                            <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#userSidebar" href="#collapseThree">
-                             条目3
-                                 </a>
-                        </h4>
-                            </div>
-                             <div id="collapseThree" class="panel-collapse collapse">
-                         <div class="panel-body">
-                            sdfsdf
-                         </div>
-                             </div>
-                          </div>
-                 </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>sdfsdf sdfsdf sdf sdf sdf  sdf sdf  sdf sdf  </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>asdf werfasdf ajd fgajd fasdf ahsdf ahd gasdf ahdsg f </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Doaerh aef ajrehg vum nibasdfaweg eh rtj asef h erjh sdf asdf s usy sf casd ft risus.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
       </div>
-      </div>
-      <div class="col-md-9">
-      </div>
-    </div>
-    <script src="/static/js/tab.js"></script>
-         <script src="/static/js/transition.js"></script>
-    <script src="/static/js/alert.js"></script>
-    <script src="/static/js/modal.js"></script>
-    <script src="/static/js/dropdown.js"></script>
-    <script src="/static/js/scrollspy.js"></script>
-    <script src="/static/js/tab.js"></script>
-    <script src="/static/js/tooltip.js"></script>
-    <script src="/static/js/popover.js"></script>
-    <script src="/static/js/button.js"></script>
-    <script src="/static/js/collapse.js"></script>
-    <script src="/static/js/carousel.js"></script>
-        </body>
-</html>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Company 2014</p>
+      </footer>
+    </div> <!-- /container -->
