--- a/templates/notification/list.html
+++ b/templates/notification/list.html
@@ -1,3 +1,5 @@
+{% extend "base.html" %}
+{% block main_content %}
 <div class="col-md-12" id="NotificationList">
   <div class="panel panel-default">
     <div class="panel-body">{message} 详情：{url}></div>
@@ -15,3 +17,4 @@
     }
   }
 </script>
+{% endblock %}
