--- a/templates/webboard/status/list.html
+++ b/templates/webboard/status/list.html
@@ -31,7 +31,7 @@
         <tbody>
         {% for object in objects.object_list %}
             <tr id="tr{{object.id}}">
-                <td>{{object.title}}</td>
+                <td><a href="{{object.id}}">{{object.title}}</a></td>
                 <td>{{object.created_time|date:"m-d H:i"}}</td>
                 <td>
                 {% if perms.status.delete_modify %}
